--- a/.github/workflows/helplinev1-ci.yml
+++ b/.github/workflows/helplinev1-ci.yml
@@ -105,15 +105,42 @@ jobs:
           fi
           
           # Get PHPUnit test output for detailed test information
+          echo "📊 Generating detailed test summary..."
+          
+          # Run PHPUnit with multiple output formats for comprehensive reporting
+          ./vendor/bin/phpunit --testdox > test-summary.txt 2>&1 || echo "Test summary not available" > test-summary.txt
+          ./vendor/bin/phpunit --verbose --testdox-text > test-detailed.txt 2>&1 || echo "Detailed test output not available" > test-detailed.txt
+          
+          # Parse test results and format as table
+          TEST_SUMMARY_TABLE="| Test Class | Test Method | Status |\n|------------|-------------|--------|\n"
+          
+          # Extract test information and create table rows
+          if [ -f "test-summary.txt" ]; then
+            # Parse testdox output to extract test information
+            while IFS= read -r line; do
+              if [[ $line =~ ^[[:space:]]*✓[[:space:]]+(.*) ]]; then
+                # Extract test method name
+                test_method="${BASH_REMATCH[1]}"
+                # Get class name from context (simplified)
+                test_class="PHPUnit Test"
+                TEST_SUMMARY_TABLE+="| $test_class | $test_method | ✅ Pass |\n"
+              elif [[ $line =~ ^[[:space:]]*✗[[:space:]]+(.*) ]]; then
+                test_method="${BASH_REMATCH[1]}"
+                test_class="PHPUnit Test"
+                TEST_SUMMARY_TABLE+="| $test_class | $test_method | ❌ Fail |\n"
+              fi
+            done < test-summary.txt
+          fi
+          
+          # If table is empty, provide fallback
+          if [ "$TEST_SUMMARY_TABLE" == "| Test Class | Test Method | Status |\n|------------|-------------|--------|\n" ]; then
+            TEST_SUMMARY_TABLE="| Test Class | Test Method | Status |\n|------------|-------------|--------|\n| PHPUnit | Test Execution | ✅ Completed |\n"
+          fi
+          
+          # Get raw test details as fallback
           TEST_DETAILS="No test details available"
-          if [ -f "phpunit-output.txt" ]; then
-            TEST_DETAILS=$(cat phpunit-output.txt | tail -20)
-          else
-            # Try to get recent test output
-            ./vendor/bin/phpunit --testdox > test-summary.txt 2>&1 || echo "Test summary not available" > test-summary.txt
-            if [ -f "test-summary.txt" ]; then
-              TEST_DETAILS=$(cat test-summary.txt)
-            fi
+          if [ -f "test-summary.txt" ]; then
+            TEST_DETAILS=$(cat test-summary.txt)
           fi
           
           cat > ../helpline-coverage.md << EOF
@@ -144,6 +171,10 @@ jobs:
           \`\`\`
 
           ## 🧪 Test Summary
+
+          ${TEST_SUMMARY_TABLE}
+
+          ### Raw Test Output
 
           \`\`\`
           ${TEST_DETAILS}
@@ -192,33 +223,61 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           
+          echo "🔍 Current git status before commit:"
+          git status
+          
           # Handle different event types
           if [ "${{ github.event_name }}" == "pull_request" ]; then
             # For pull requests, commit to the PR branch
             echo "🔄 Working with PR branch: ${{ github.head_ref }}"
-            git fetch origin ${{ github.head_ref }}
-            git checkout ${{ github.head_ref }}
             TARGET_BRANCH="${{ github.head_ref }}"
+            
+            # Ensure we have the latest PR branch
+            git fetch origin ${{ github.head_ref }}:${{ github.head_ref }} || echo "Branch fetch failed, continuing..."
+            git checkout ${{ github.head_ref }} || echo "Checkout failed, staying on current branch"
           else
             # For push events, commit to the current branch
             echo "🔄 Working with push branch: ${{ github.ref_name }}"
             TARGET_BRANCH="${{ github.ref_name }}"
           fi
           
-          git add helplinev1/helpline-coverage.md
+          # Ensure the file exists and add it
+          if [ -f "helplinev1/helpline-coverage.md" ]; then
+            git add helplinev1/helpline-coverage.md
+            echo "✅ Added helpline-coverage.md to git"
+          else
+            echo "❌ helpline-coverage.md not found!"
+            ls -la helplinev1/
+            exit 1
+          fi
           
+          # Check if there are changes to commit
           if ! git diff --staged --quiet; then
+            echo "📝 Changes detected, committing..."
+            
             # Add [skip ci] for PR commits to avoid infinite loops
             if [ "${{ github.event_name }}" == "pull_request" ]; then
-              git commit -m "📈 Auto-update coverage report - ${{ env.COVERAGE_PERCENTAGE }}% coverage [skip ci]"
+              git commit -m "📈 Auto-update coverage report - ${{ env.COVERAGE_PERCENTAGE }}% coverage [skip ci]" || {
+                echo "❌ Commit failed for PR"
+                git status
+                exit 1
+              }
             else
-              git commit -m "📈 Auto-update coverage report - ${{ env.COVERAGE_PERCENTAGE }}% coverage"
+              git commit -m "📈 Auto-update coverage report - ${{ env.COVERAGE_PERCENTAGE }}% coverage" || {
+                echo "❌ Commit failed for push"
+                git status
+                exit 1
+              }
             fi
             
-            git push origin $TARGET_BRANCH
-            echo "✅ Coverage report committed to $TARGET_BRANCH branch"
+            # Push the changes
+            git push origin $TARGET_BRANCH || {
+              echo "❌ Push failed to $TARGET_BRANCH"
+              git status
+              exit 1
+            }
             
-            # Show branch info for confirmation
+            echo "✅ Coverage report committed to $TARGET_BRANCH branch"
             echo "📊 Coverage: ${{ env.COVERAGE_PERCENTAGE }}% on branch: $TARGET_BRANCH"
           else
             echo "ℹ️ No changes to commit - coverage report unchanged"
