--- a/frontend/call-center-case-mgmt/package.json
+++ b/frontend/call-center-case-mgmt/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "jssip": "^3.10.1",
     "pinia": "^3.0.3",
+    "sip.js": "^0.21.2",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
