--- a/helplinev1/docker-compose.yml
+++ b/helplinev1/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  # MySQL ........................sql sql....sql
-  
+  # MySQL ........................sql sql....sql...
+
   database:
     image: mysql:8.0
     container_name: helpline-db
